tests/ui/parser/issues/issue-20616-3.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `,`
  --> $DIR/issue-20616-3.rs:13:24
   |
LL | type Type_3<T> = Box<T,,>;
   |                        ^ expected one of `>`, a const expression, lifetime, or type
   |
help: you might have meant to end the type parameters here
   |
LL | type Type_3<T> = Box<T>,,>;
   |                       +

error: aborting due to 1 previous error

